--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,24 +29,37 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      # 4️⃣ Setup Biome
+      # 4️⃣ Setup Turbo cache
+      - name: Setup Turbo cache
+        uses: actions/cache@v5
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
+      # 5️⃣ Setup Biome
       - name: Setup Biome
         uses: biomejs/setup-biome@v2
         with:
           version: latest
 
-      # 5️⃣ Run Biome CI
+      # 6️⃣ Run Biome CI
       - name: Run Biome checks
         run: bun run check:ci
 
-      # 6️⃣ Clean dist
+      # 7️⃣ Check types
+      - name: Check TypeScript types
+        run: bun run check-types
+
+      # 8️⃣ Clean dist
       - name: Clean dist folder
         run: bun run clean
 
-      # 7️⃣ Build TypeScript & bundle
+      # 9️⃣ Build TypeScript & bundle
       - name: Build library
         run: bun run build
 
-      # 8️⃣ Run tests
+      # 🔟 Run tests
       - name: Run tests
         run: bun test
