--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "galsen-streak",
-  "module": "src/index.ts",
-  "type": "module",
   "private": true,
   "scripts": {
-    "start": "bun run build && bun ./dist/index.js",
-    "dev": "bun run --watch ./src/index.ts",
-    "build": "bun run clean && tsc && bun build src/index.ts --outdir dist --minify --target bun",
-    "clean": "bunx rimraf dist",
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "preview": "turbo run preview",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "format:check": "biome format .",
     "check": "biome check --write .",
-    "check:ci": "biome ci ."
+    "check:ci": "biome ci .",
+    "check-types": "turbo run check-types",
+    "clean": "turbo run clean"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@types/bun": "^1.3.6"
+    "turbo": "^2.7.5",
+    "typescript": "5.9.3"
   },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
+  "engines": {
+    "node": ">=18"
   },
-  "dependencies": {
-    "date-fns": "^4.1.0",
-    "hono": "^4.11.4"
-  }
+  "packageManager": "bun@1.3.6",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
