--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@types/bun": "^1.3.6"
+    "@types/bun": "^1.3.6",
+    "@types/node": "^20.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
